mock sdk
Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>